CMS7-8637: fix hiding all paging buttons except current page in collapsed document list

--- a/cms/api/src/main/styling/less/_doclist.less
+++ b/cms/api/src/main/styling/less/_doclist.less
@@ -335,7 +335,7 @@
   }
 }
 
-.yui-layout-collapsed .hippo-list-documents {
+.yui-layout-collapsed .hippo-list-documents .hippo-list-paging {
   // hide all buttons except the current page indicator
   .paging-navigator .goto a {
     display: none;
